horizontal scrolling fixed

--- a/style.css
+++ b/style.css
@@ -81,11 +81,7 @@ body {
 }
 /**/
 .started {
-  background-image: url(bottom.png) ;
-  background-repeat: no-repeat;
-  background-position: bottom left;
- 
-  background-origin:border-box;
+
 }
 
 
@@ -547,77 +543,32 @@ padding: 30px;
 }
 
 
-.footer {background-color: darkblue;}
-.barra {
-    display: flex;
-    flex-direction: row;
-
-justify-content:flex-start;
- align-items: center;
- padding: 10px;
-}
 
 
-.reg {
 
-  display: flex;
-  justify-content:space-between; 
-}
-.barra .subs {
 
-    width: 160px;
-    list-style: none;
-    background-color: rgb(33, 95, 153);
-    color: white;
-    text-decoration: none;
-    border: 0;
-
-    text-align: center;
-    border-radius: 5px;
-    padding: 15px;
-margin-right: 40px;
-  }
-  .barra .mail {
-    width: 350px;
-    list-style: none;
-    background-color:darkblue;
-    color: white;
-    text-decoration: none;
-    border: 2px solid rgb(115, 115, 238);;
-
-    padding-left: 20px;
-    text-align: center;
-    border-radius: 5px;
-    padding: 15px;
-
-    margin-right: 20px;
-
-  }
-
-  .barra .logo {
-    margin: 50px;
-  }
-
-  .reg {
+  .logo  {
 
       display: flex;
       flex-direction: row;
       padding: 20px;
-
+      margin: 50px;
 
   }
 
 
 
-  .subs:hover {
-    background-image: linear-gradient(to bottom right, rgb(80, 146, 207), rgb(204, 96, 168));
-  }
+
 
 
     .tabla {
       display:flex;
-      margin-left: 120px;
-      background-color: darkblue;
+      
+      background-image: url(bottom.png) ;
+      background-repeat: no-repeat;
+      background-position: bottom left;
+     
+      background-origin:border-box;
   }
 
   .tabla  li:hover {color:grey;}
@@ -685,8 +636,9 @@ align-items: center;
   .update {
 
     grid-template-areas:
-    'iz iz'
     'td td'
+    'iz iz'
+    
    ;
 }
 
@@ -694,8 +646,10 @@ align-items: center;
 .limit {
 
     grid-template-areas:
-    'iz iz'
+    
     'td2 td2 '
+    'iz2 iz2'
+    
 
 
    ;
